--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ build/Release
 
 # Dependency directories
 node_modules/
+frontend/node_modules/
+backend/node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
@@ -68,6 +70,8 @@ web_modules/
 # dotenv environment variable files
 .env
 .env.*
+backend/.env
+frontend/.env
 !.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
